STERI016-413-regression-am: Fix text alignment issue in full-width card version

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -879,12 +879,8 @@ main .section.centered-text .default-content-wrapper {
   text-align: center;
 }
 
-main .centered-headings .default-content-wrapper > h1,
-main .centered-headings .default-content-wrapper > h2,
-main .centered-headings .default-content-wrapper > h3,
-main .centered-headings .default-content-wrapper > h4,
-main .centered-headings .default-content-wrapper > h5,
-main .centered-headings .default-content-wrapper > h6 {
+main .centered-headings .default-content-wrapper > :is(h1, h2, h3, h4, h5, h6),
+main .cards.centered-headings :is(h1, h2, h3, h4, h5, h6) {
   text-align: center;
 }
 
